--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -2,15 +2,24 @@
 
 {% load i18n %}
 
+{% load crispy_forms_tags %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+    <div class="row">
+        <div class="col-md-6 col-sm-12">
+            <h1>{% trans "Change Password" %}</h1>
+        </div>
+    </div>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+    <div class="row">
+        <div class="col-md-6 col-sm-12">
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-dark btn-block" type="submit" name="action">{% trans "Change Password" %}</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
