Quantity work started

--- a/customer/templates/customer/order.html
+++ b/customer/templates/customer/order.html
@@ -21,6 +21,7 @@
                                 <p class="font-weight-bold pl-5">{{ drink.price }}</p>
                             </div>
                             <p>{{ drink.description }}</p>
+                            <!--<input type="text" name="" placeholder="Quantity" value="">-->
                         </div>
                     </div>
                     <hr />
@@ -42,6 +43,7 @@
                                 <p class="font-weight-bold pl-5">{{ sandwich.price }}</p>
                             </div>
                             <p>{{ sandwich.description }}</p>
+                            <!--<input type="text" name="" placeholder="Quantity" value="">-->
                         </div>
                     </div>
                     <hr />
@@ -63,6 +65,7 @@
                                 <p class="font-weight-bold pl-5">{{ pizza.price }}</p>
                             </div>
                             <p>{{ pizza.description }}</p>
+                            <!--<input type="text" name="" placeholder="Quantity" value="">-->
                         </div>
                     </div>
                     <hr />
