commit 2 for quantity

--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -1,5 +1,9 @@
 {% extends 'customer/base.html' %}
 
+{% block title %}
+EasyOrders - Home
+{% endblock %}
+
 {% block content %}
 <div class="container mb-5">
     <div class="row justify-content-center mt-5">
