--- a/customer/templates/customer/order_confirmation.html
+++ b/customer/templates/customer/order_confirmation.html
@@ -14,7 +14,7 @@
         <div class="col-md-5 col-sm-12 text-center">
             <h3 class="pb-3">Order Summary:</h3>
             {% for item in items %}
-                <p>{{ item.name }} <span class="pl-3">{{ item.price }}</span></p>
+                <p>{{ item.name }} <span class="pl-3">{{ item.count }} <span class="pl-3"></span> {{ item.price }}</span></p>
             {% endfor %}
 
             <p class="font-weight-bold pt-4">Total: {{ price }}</p>
