--- a/customer/templates/customer/order.html
+++ b/customer/templates/customer/order.html
@@ -25,7 +25,7 @@ EasyOrders - Menu
                                 <p class="font-weight-bold pl-5">{{ drink.price }}</p>
                             </div>
                             <p>{{ drink.description }}</p>
-                            <input type="text" name="" placeholder="Quantity" value="">
+                            <input type="text" name="counts[]" placeholder="Quantity" value="{{ drink.count }}">
                         </div>
                     </div>
                     <hr />
@@ -47,7 +47,7 @@ EasyOrders - Menu
                                 <p class="font-weight-bold pl-5">{{ sandwich.price }}</p>
                             </div>
                             <p>{{ sandwich.description }}</p>
-                            <input type="text" name="" placeholder="Quantity" value="">
+                            <input type="text" name="counts[]" placeholder="Quantity" value="{{ sandwich.count }}">
                         </div>
                     </div>
                     <hr />
@@ -69,7 +69,7 @@ EasyOrders - Menu
                                 <p class="font-weight-bold pl-5">{{ pizza.price }}</p>
                             </div>
                             <p>{{ pizza.description }}</p>
-                            <input type="text" name="Quantity" placeholder="Quantity" value="">
+                            <input type="text" name="counts[]" placeholder="Quantity" value="{{ pizza.count }}">
                         </div>
                     </div>
                     <hr />
